tests/netlist/linear-non-006/expected
Example Non-Linearly Wired Circuits
## Circuits
```
// LOG : Starting NetList 
// (Port output logic "out" (Port input logic "a" (Port input logic[3] "bc" (Gate "n1" (GateB nand (Shim output (Var out)) (Shim input (Var a)) (Shim input (Index 1 (Var bc)))) (Stop)))))
// LOG : Parsing Successful
// (Port output logic (Port input logic (Port input logic[3] (Gate (GateB nand (Var 2) (Var 1) (Index DOWN (Var 0) 1)) Stop))))
// LOG : Type Checking Complete
// LOG : Soundness Error:
digraph G {
5 [label="(1, 1) IDX [1](DOWN)"];
3 [label="IN(3) INPUT : logic[3]"];
2 [label="IN(1) INPUT : logic"];
1 [label="OUT(1) OUTPUT : logic"];
4 [label="(2, 1) nand"];
	3 -> 5;
	2 -> 4;
	5 -> 4;
	4 -> 1;
}

//because:
// Vertex 3
//  has expected degree OUT 3
//  but we found degree OUT 1


```
## Verilator
```
%Warning-UNUSEDSIGNAL: ../../shared/linear-non/DanglingArray.sv:3:35: Bits of signal are not used: 'bc'[2,0]
                                                                    : ... In instance DanglingArray
    3 |               , input  logic[2:0] bc
      |                                   ^~
                       ... For warning description see https://verilator.org/warn/UNUSEDSIGNAL?v=5.002
                       ... Use "/* verilator lint_off UNUSEDSIGNAL */" and lint_on around source to disable this message.
%Error: Exiting due to 1 warning(s)
```
